--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -12,8 +12,18 @@
 </div>
 <div id="subheader">
     <div class="cart">
-        Ваша корзина пуста
-    </div>
+    {% with total_items=cart|length %}
+        {% if cart|length > 0 %}
+            Ваша корзина:
+            <a href="{% url "cart:cart_detail" %}">
+                {{ total_items }} товаров,
+                ₽{{ cart.get_total_price }}
+            </a>
+        {% else %}
+            Ваша корзина пуста
+        {% endif %}
+    {% endwith %}
+</div>
 </div>
 <div id="content">
     {% block content %}
