Added about page

--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -9,6 +9,7 @@
 <body>
 <div id="header">
     <a href="/" class="logo">WitchShop</a>
+    <a href="{% url "shop:about" %}" class="logo">About</a>
 </div>
 <div id="subheader">
     <div class="cart">
