Added about page

--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -10,6 +10,7 @@
 <div id="header">
     <a href="/" class="logo">WitchShop</a>
     <a href="{% url "shop:about" %}" class="logo">About</a>
+    <a href="{% url "shop:authors" %}" class="logo">Authors</a>
 </div>
 <div id="subheader">
     <div class="cart">
