--- a/myshop/shop/templates/shop/product/about.html
+++ b/myshop/shop/templates/shop/product/about.html
@@ -4,6 +4,11 @@
 
 {% block content %}
   <div>
-    <h1>Meow</h1>
+    <h2>Об издательстве</h2>
+    <div>
+      <p>Witch Shop — книжное издательство из Ростова-на-Дону. Мы издаем захватывающие художественные книги, которые затрагивают «неудобные» темы: проблемы самоидентификации, расизма и сексизма, отношения к собственному телу и т.п</p>
+      <p>Друзья, мы решили временно остановить приём рукописей. Все присланные ранее рукописи будут рассмотрены, и мы сообщим вам о своём решении.</p>
+      <img src="https://www.ripleys.com/wp-content/uploads/2022/10/22Halloween.22_A_Witch_riding_a_broomstick_with_a_black_cat-1024x658.jpg">
+    </div>
   </div>
 {% endblock %}
